<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bezch"
    tools:context="izenka.hfad.com.bookstore.OrderRegistrationActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/color9">

        <Button
            android:layout_width="25dp"
            android:layout_height="15dp"
            android:layout_gravity="left|center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/return_back"
            android:backgroundTint="@color/bootstrap_brand_secondary_fill"
            android:onClick="onReturnBackClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="60dp"
            android:text="@string/orderRegistration"
            android:textColor="@color/yellow"
            android:textSize="20sp" />

    </FrameLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:textColor="@color/color9"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="@string/fillForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="7dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/necessaryToFill"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="70dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/white1"
                android:layout_height="70dp">

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etName"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:hint="@string/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etCity"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etStreet"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etHouse"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/house"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etFlatNumber"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/flat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etPorchNumber"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/porch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/etFloor"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/floor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>

        <mehdi.sakout.fancybuttons.FancyButton
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/endRegistration"

            android:onClick="onBtnRegistrateClick"
            fancy:fb_borderColor="@color/darkBrown"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/biruz"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/endRegistration"
            fancy:fb_textColor="@color/color9"
            fancy:fb_textSize="20sp" />

    </RelativeLayout>

</LinearLayout>
