<?xml version="1.0" encoding="utf-8"?>

<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:columnCount="2"
    android:rowCount="5"
    android:id="@+id/glParameters"
    android:layout_gravity="center"
    android:padding="10dp"
    >

<TextView
    android:layout_columnWeight="1"
    android:text="@string/publisher"
    android:textAlignment="inherit"
    android:layout_margin="3dp"
    />

    <TextView
        android:id="@+id/tvPublisher"
        android:layout_columnWeight="5"
        android:layout_margin="3dp"
        />
    <TextView
        android:layout_columnWeight="1"
        android:text="@string/countInWarehouse"
        android:layout_margin="3dp"
        />
    <TextView
        android:id="@+id/tvCount"
        android:layout_columnWeight="5"
        android:layout_margin="3dp"
        />
    <TextView
        android:layout_columnWeight="1"
        android:text="@string/pagesNumber"
        android:layout_margin="3dp"
        />
    <TextView
    android:id="@+id/tvPages"
    android:layout_columnWeight="5"
    android:layout_margin="3dp"
    />
    <TextView
    android:layout_columnWeight="1"
    android:text="@string/coverType"
    android:layout_margin="3dp"
    />
    <TextView
        android:id="@+id/tvCover"
        android:layout_columnWeight="5"
        android:layout_margin="3dp"
        />



</GridLayout>
